--- a/templates/home.html
+++ b/templates/home.html
@@ -15,3 +15,15 @@
 <button onclick = "window.location.href = '/cookies'">
     Get cookies !
 </button>
+
+<button onclick = "window.location.href = '/pytrends'">
+    Pytrends !
+</button>
+
+<button onclick = "window.location.href = '/shakespear'">
+    shakespear count with dict !
+</button>
+
+<button onclick = "window.location.href = '/countShakespear'">
+    shakespear count with counter !
+</button>
